--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="MiApp">
     <head>
-        <title>{{(pageTitle|| 'CONTACT_POPUP')|translate}}</title>
+        <title>{{(pageTitle|| 'CONTACT_POPUP')|translate}} (^-^)</title>
         <meta charset="UTF-8">
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -47,26 +47,26 @@
         <script src="node_modules/angular-translate/dist/angular-translate-storage-local/angular-translate-storage-local.min.js" type="text/javascript"></script>
         <script src="node_modules/angular-translate/dist/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js" type="text/javascript"></script>
         <!-- End angular tranlate -->
-        
+
         <!-- Angular firebase     -->
         <!--<script src="node_modules/firebase/firebase.js" type="text/javascript"></script>-->
         <!--<script src="node_modules/firebase/firebase-database.js" type="text/javascript"></script>-->
         <!--<script src="node_modules/firebase/firebase-storage.js" type="text/javascript"></script>-->
         <!--<script src="node_modules/firebase/firebase-auth.js" type="text/javascript"></script>-->
         <!--<script src="node_modules/angularfire/dist/angularfire.min.js" type="text/javascript"></script>-->
-        
-<!--        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyC3MwOkoxW0VCONw7YvdNI3hMjpEj3QZ3A",
-                authDomain: "miapp-379fe.firebaseapp.com",
-                databaseURL: "https://miapp-379fe.firebaseio.com",
-                projectId: "miapp-379fe",
-                storageBucket: "miapp-379fe.appspot.com",
-                messagingSenderId: "494250805972"
-            };
-            firebase.initializeApp(config);
-        </script>-->
+
+        <!--        <script>
+                    // Initialize Firebase
+                    var config = {
+                        apiKey: "AIzaSyC3MwOkoxW0VCONw7YvdNI3hMjpEj3QZ3A",
+                        authDomain: "miapp-379fe.firebaseapp.com",
+                        databaseURL: "https://miapp-379fe.firebaseio.com",
+                        projectId: "miapp-379fe",
+                        storageBucket: "miapp-379fe.appspot.com",
+                        messagingSenderId: "494250805972"
+                    };
+                    firebase.initializeApp(config);
+                </script>-->
         <!-- End Angular firebase -->
 
         <!-- ///////////// END Plugins angularjs //////////// -->
