--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
     <head>
         <title>{{(pageTitle|| 'CONTACT_POPUP')|translate}} (^-^)</title>
         <meta charset="UTF-8">
+        <link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
         <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/angular-confirm1/css/angular-confirm.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/ng-tags-input/build/ng-tags-input.min.css" rel="stylesheet" type="text/css"/>
+        <!--<link href="node_modules/ng-tags-input/build/ng-tags-input.bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
         <link href="node_modules/angular-tooltips/dist/angular-tooltips.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet" type="text/css"/>
         <link href="node_modules/c3-angular/examples/assets/css/c3.min.css" rel="stylesheet" type="text/css"/>
@@ -72,13 +74,17 @@
         <!-- ///////////// END Plugins angularjs //////////// -->
 
         <!-- -- Start controller - -->
+        <script src="app/services/authService.js" type="text/javascript"></script>
         <script src="app/services/crudService.js" type="text/javascript"></script>
         <script src="app/app.js" type="text/javascript" id="app-level-js"></script>
+        <!--<script src="app/services/dirPagination.js" type="text/javascript"></script>-->
+        
         <script src="app/controllers/loginController.js" type="text/javascript"></script>
         <script src="app/controllers/appController.js" type="text/javascript"></script>
         <script src="app/controllers/dashboard/dashboardController.js" type="text/javascript"></script>
         <script src="app/controllers/customers/customerController.js" type="text/javascript"></script>
         <script src="app/controllers/customers/customerActionController.js" type="text/javascript"></script>
+        <!--<script src="public/min/app.min.js" type="text/javascript"></script>-->
         <!-- --- End controller -- -->
     </body>
 </html>
